--- a/packages/telescope-roles/lib/client/templates/edit_roles.html
+++ b/packages/telescope-roles/lib/client/templates/edit_roles.html
@@ -1,20 +1,20 @@
 <template name="editRoles">
-  {{#if isAdmin}}
 
   <div class="grid-small grid-block dialog admin">
     <h3>Roles</h3>
 
+  {{#if isAdmin}}
     <form class="add-role">
     	<input type="text" name="role" placeholder="Type to add a new role" />
   	</form>
+  {{/if}}
 
 	<br>
 
   	{{#each roles}}
-  		<li> <b> {{this}} </b> </li>
+  		<li> <b> {{this}} </b></li> {{#if isAdmin}} <input type="button" class="remove-role button" id={{this}} value="remove" /> {{/if}}
   	{{/each}}
   </div>
 
-  {{/if}}
 
 </template>
