--- a/packages/after-sign-up/lib/client/templates/custom_template.html
+++ b/packages/after-sign-up/lib/client/templates/custom_template.html
@@ -1,3 +1,3 @@
-<template name="customTemplate">
-  Custom Template
+<template name="form">
+  <iframe src="https://docs.google.com/forms/d/1rpXBEnfAFS1DiYmtVzL-AGTWL9OPxBX1KGcu4m6eu5U/viewform?embedded=true" width="1000" height="1000" frameborder="0" marginheight="0" marginwidth="0">Caricamento in corso...</iframe>
 </template>
